remove offset field filter and convert host.name field to host

--- a/mnt/logstash/pipeline/airflow-logs.conf
+++ b/mnt/logstash/pipeline/airflow-logs.conf
@@ -12,13 +12,18 @@ filter {
         }
     }
     mutate {
+        # rename "host" of type object to "file_host" so the new field "host" of type text
+        # wouldn't have values equal to the object "host" keys because of the same name  
+        rename => {"host" => "file_host"}
+    }
+    mutate {
         add_field => { 
-            "offset" => "%{[log][offset]}" 
+            "host" => "%{[file_host][name]}"
         }
     }
     mutate {
         convert => {
-            "offset" => "integer"
+            "host" => "string"
         }
     }
 }
